MOdified as the Submission property changes
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/components@71409 fb370eea-3af6-4597-97f7-f7400a59c12a